<resources>
    <string name="app_name">ZoloStays</string>

    <string name="phonehint">PHONE NUMBER</string>
    <string name="passwordhint">PASSWORD</string>

    <string name="buttonlogin">LOGIN</string>
    <string name="textforgot">Forgot password?</string>
    <string name="buttoncreate">CREATE ACCOUNT</string>

    <string name="forgotpassword">FORGOT \n PASSWORD?</string>
    <string name="enteremail">Please enter your registered Email address</string>
    <string name="emailhint">YOUR EMAIL</string>

    <string name="submit">SUBMIT</string>
    <string name="register">REGISTER</string>
    <string name="registerdesc">Please register with Zolo to continue</string>
    
    <string name="registerphone">YOUR PHONE NUMBER</string>
    <string name="registeremail">YOUR EMAIL ID</string>
    <string name="registername">YOUR NAME</string>
    <string name="setpassword">SET PASSWORD</string>


    <string name="phoneerror">Invalid Phone number</string>
    <string name="emailerror">Invalid Email address</string>
    <string name="nameerror">Invalid Name, must contain 2 characters</string>
    <string name="passworderror">Invalid Password, must contain 3&#8211;8 chararcters</string>

    <string name="mailheader">This mail has been sent from ZoloStays assessment app developed by Prudhvi</string>
    <string name="mailFooter">\n---- This is an autogenerated email don\'t reply to this ----\n</string>

    <string name="open">Drawer Opened</string>
    <string name="close">Drawer Closed</string>

    <string name="update">UPDATE</string>
</resources>
