<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="uvm"
            type="com.assessment.zolostays.viewmodel.RegistrationViewModel"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.assessment.zolostays.view.ForgotPasswordActivity">
        <Button
            android:id="@+id/forgotLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:onClick="@{uvm.onLoginButtonClicked()}"
            android:text="@string/buttonlogin"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotLogin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotpassword"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:lineSpacingExtra="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/enteremail"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_email_white_24dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    app:hintAnimationEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/forgotEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/emailhint"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/colorAccent"
                android:text="@string/submit"/>
        </LinearLayout>
    </RelativeLayout>
</layout>
