<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.assessment.zolostays.model.User"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.assessment.zolostays.view.LoginActivity">
            <ImageView
                android:id="@+id/bg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"
                android:src="@drawable/back" />
            <LinearLayout
                android:layout_below="@id/bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="15dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_phone_white_24dp"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:paddingRight="0dp"
                        app:hintAnimationEnabled="true">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/loginPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:hint="@string/phonehint"
                            android:textColor="@color/white"
                            android:textSize="16sp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="15dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_vpn_key_white_24dp"/>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="0dp"
                        android:paddingRight="0dp"
                        app:hintAnimationEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/white">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/loginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/passwordhint"
                            android:textColor="@color/white"
                            android:textSize="16sp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonlogin"
                    android:background="@color/colorAccent"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:shadowColor="@color/black"
                    android:shadowDx="3"
                    android:shadowDy="1.5"
                    android:shadowRadius="5"/>
                <TextView
                    android:id="@+id/loginForgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textforgot"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/buttoncreate"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>
