<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assessment.zolostays.view.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/forgotLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/buttonlogin"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="75sp"
            android:layout_centerHorizontal="true"
            android:alpha="0.2"
            android:layout_margin="40dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotLogin"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:letterSpacing="5"
                android:lineSpacingExtra="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/registerdesc"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_phone_white_24dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    app:hintAnimationEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/registerPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:hint="@string/registerphone"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_email_white_24dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    app:hintAnimationEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/registeremail"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_person_white_24dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    app:hintAnimationEnabled="true">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/registerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/registername"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="15dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_vpn_key_white_24dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    app:hintAnimationEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/registerPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/setpassword"
                        android:textColor="@color/white"
                        android:textSize="16sp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:background="@color/colorAccent"
                android:layout_marginRight="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/register" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
