<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.assessment.zolostays.viewmodel.MainViewModel"/>
    </data>
    <android.support.v4.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        android:id="@+id/drawer"
        tools:context="com.assessment.zolostays.view.MainActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                tools:context=".MainActivity">
                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@drawable/back"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:fitsSystemWindows="true">
                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:background="@android:color/transparent"
                        android:layout_height="?attr/actionBarSize"
                        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                    </android.support.v7.widget.Toolbar>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/app_name"
                        android:layout_gravity="center"/>
                </android.support.design.widget.AppBarLayout>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="230dp">
                    <LinearLayout
                        android:id="@+id/container"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_phone_blue"/>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingStart="15dp"
                                android:paddingEnd="5dp"
                                android:paddingRight="5dp"
                                app:hintAnimationEnabled="true">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/registerPhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="phone"
                                    android:maxLength="10"
                                    android:maxLines="1"
                                    android:text="@={model.phone}"
                                    android:hint="@string/registerphone"
                                    android:textSize="16sp"
                                    app:validateEmpty="@{true}"
                                    app:validateMinLength="@{10}" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_email_blue"/>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingStart="15dp"
                                android:paddingEnd="5dp"
                                android:paddingRight="5dp"
                                app:hintAnimationEnabled="true">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/registerEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textEmailAddress"
                                    android:hint="@string/registeremail"
                                    android:text="@={model.email}"
                                    android:textSize="16sp"
                                    app:validateEmpty="@{true}"
                                    app:validateType='@{"email"}' />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginEnd="20dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_margin="15dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_person_blue"/>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:paddingStart="15dp"
                                android:paddingEnd="5dp"
                                android:paddingRight="5dp"
                                app:hintAnimationEnabled="true">
                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/registerName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPersonName"
                                    android:hint="@string/registername"
                                    android:textSize="16sp"
                                    android:text="@={model.name}"
                                    app:validateEmpty="@{true}"
                                    app:validateMinLength="@{2}" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                        <Button
                            android:id="@+id/buttonUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginStart="25dp"
                            android:background="@color/colorAccent"
                            android:layout_marginRight="25dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginBottom="30dp"
                            android:text="@string/update" />
                    </LinearLayout>
                </ScrollView>
            </android.support.design.widget.CoordinatorLayout>
        </RelativeLayout>
        <android.support.design.widget.NavigationView
            android:layout_width="match_parent"
            android:id="@+id/navgation_view"
            app:headerLayout="@layout/header"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            app:menu="@menu/main_menu"/>
    </android.support.v4.widget.DrawerLayout>
</layout>
